--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,7 +1,5 @@
-<p>member works!</p>
-
 <div class="col-md-6">
-    <h2> User Details</h2>
+    <h2> Family Details</h2>
      
     <table class="table table-striped">
       <thead>
